Renames Incident to Issue and cleans it

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -880,7 +880,6 @@ arb:
       financial_year: "السنة المالية"
       # fungus: "Champignon"
       # immatter: "Immatériel"
-      # incident: "Incident"
       # incoming_delivery: "Approvisionnement"
       # incoming_delivery_item: "Élément d’approvisionnement"
       # incoming_delivery_mode: "Mode d’approvisionnement"
@@ -891,6 +890,7 @@ arb:
       # intervention_cast: "Variable de procédure"
       inventory: "عملية الجرد"
       inventory_item: "طريقة عملية الجرد"
+      # issue: "Incident"
       journal: "الدفتر اليومي"
       journal_entry: "المدخلات"
       # journal_entry_item: "Ligne d’écriture"
@@ -1387,8 +1387,6 @@ arb:
     importance: "ذو شأن"
     # in_cash: "En espèce"
     in_name: "الاختصارات تشمل اسم الملف" #?
-    # incident: "Incident"
-    # incidents: "Incidents"
     included: "تضمنت"
     # incoming_deliveries: "Approvisionnements"
     # incoming_delivery_items: "Éléments d’approvisionnement"
@@ -1424,6 +1422,8 @@ arb:
     # invoiced_on: "Facturée le"
     # invoices_count: "Nombre de factures"
     is_debit: "مدين" #?
+    # issue: "Incident"
+    # issues: "Incidents"
     item_listing: "عقد الاستخراج"
     item_listing_id: "عقد استخراج" #?
     item_listing_node: "عقد البند"
@@ -1635,10 +1635,11 @@ arb:
     # population: "Population"
     # population_counting: "Gestion quantitative"
     position: "الوضع"
+    # postal_code: "Code postal"
     postal_zone: "المنطقة البريدية"
     postal_zone_id: "العنوان البريدي" #?
     postal_zones: "الرموز البريدية"
-    postcode: "الرمز البريدي"
+    postcode: "الرمز البريدي" #?
     preferences: "الاعدادات"
     # prescription: "Prescription"
     # prescriptor: "Prescripteur"
