--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -352,7 +352,6 @@ jpn:
       # financial_year: "Exercice"
       # fungus: "Champignon"
       # immatter: "Immatériel"
-      # incident: "Incident"
       # incoming_delivery: "Approvisionnement"
       # incoming_delivery_item: "Élément d’approvisionnement"
       # incoming_delivery_mode: "Mode d’approvisionnement"
@@ -362,6 +361,7 @@ jpn:
       # intervention_cast: "Variable de procédure"
       # inventory: "Inventaire"
       # inventory_item: "Ligne d’inventaire"
+      # issue: "Incident"
       # journal: "Journal"
       # journal_entry: "Écriture"
       # journal_entry_item: "Ligne d’écriture"
@@ -705,8 +705,6 @@ jpn:
     # identification_number: "Numéro d’identification"
     # importance: "Importance"
     # in_cash: "En espèce"
-    # incident: "Incident"
-    # incidents: "Incidents"
     # included: "Incluse"
     # incoming_deliveries: "Approvisionnements"
     # incoming_delivery_items: "Éléments d’approvisionnement"
@@ -735,6 +733,8 @@ jpn:
     # invoiced: "Facturée"
     # invoiced_on: "Facturée le"
     # invoices_count: "Nombre de factures"
+    # issue: "Incident"
+    # issues: "Incidents"
     # item_listing: "Nœud de l’extraction"
     # item_listing_node: "Nœud de l’élément"
     # item_nature: "Nature de l’élément"
@@ -881,9 +881,9 @@ jpn:
     # population: "Population"
     # population_counting: "Gestion quantitative"
     # position: "Position"
+    # postal_code: "Code postal"
     # postal_zone: "Zone postale"
     # postal_zones: "Zones postales"
-    # postcode: "Code postal"
     # preferences: "Préférences"
     # prescription: "Prescription"
     # prescriptor: "Prescripteur"
