--- a/config/locales/spa/complement.yml
+++ b/config/locales/spa/complement.yml
@@ -363,11 +363,11 @@ spa:
         ZWL: "Dólar zimbabuense"
     immatter:
 
-    incident:
-
     intervention:
 
     intervention_cast:
+
+    issue:
 
     land_parcel_cluster:
 
