--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -121,12 +121,12 @@ fra:
       # show: "Show backend/cells/last entities cell"
     backend/cells/last_events_cells:
       # show: "Show backend/cells/last events cell"
-    backend/cells/last_incidents_cells:
-      # show: "Show backend/cells/last incidents cell"
     backend/cells/last_incoming_deliveries_cells:
       # show: "Show backend/cells/last incoming deliveries cell"
     backend/cells/last_interventions_cells:
       # show: "Show backend/cells/last interventions cell"
+    backend/cells/last_issues_cells:
+      # show: "Show backend/cells/last issues cell"
     backend/cells/last_milk_result_cells:
       # show: "Show backend/cells/last milk result cell"
     backend/cells/last_outgoing_deliveries_cells:
@@ -262,15 +262,6 @@ fra:
       index: "Aide"
       show: "Voir l’aide"
       toggle: "Basculer l’aide"
-    backend/incidents:
-      # drop: "Drop backend/incident"
-      edit: "Modifier l’incident\_: %{name} (%{nature})"
-      index: "Incidents"
-      new: "Nouvel incident"
-      # picture: "Picture backend/incident"
-      # reopen: "Reopen backend/incident"
-      show: "Incident %{name} (%{nature})"
-      # solve: "Solve backend/incident"
     backend/incoming_deliveries:
       confirm: "Confirmer l’arrivée de l’approvisionnement"
       edit: "Modifier l’approvisionnement: %{number}"
@@ -303,6 +294,15 @@ fra:
       index: "Inventaires"
       new: "Nouvel inventaire"
       show: "Inventaire %{number}"
+    backend/issues:
+      # abort: "Abort backend/issue"
+      # close: "Close backend/issue"
+      edit: "Modifier l’incident\_: %{name} (%{nature})"
+      index: "Incidents"
+      new: "Nouvel incident"
+      # picture: "Picture backend/issue"
+      # reopen: "Reopen backend/issue"
+      show: "Incident %{name} (%{nature})"
     backend/journal_entries:
       edit: "Modifier l’écriture\_: %{number}"
       # index: "Index backend/journal entry"
@@ -694,9 +694,9 @@ fra:
     # backend/cells/last_document_archives_cells: "Backend/cells/last document archives cells"
     # backend/cells/last_entities_cells: "Backend/cells/last entities cells"
     # backend/cells/last_events_cells: "Backend/cells/last events cells"
-    # backend/cells/last_incidents_cells: "Backend/cells/last incidents cells"
     # backend/cells/last_incoming_deliveries_cells: "Backend/cells/last incoming deliveries cells"
     # backend/cells/last_interventions_cells: "Backend/cells/last interventions cells"
+    # backend/cells/last_issues_cells: "Backend/cells/last issues cells"
     # backend/cells/last_milk_result_cells: "Backend/cells/last milk result cells"
     # backend/cells/last_outgoing_deliveries_cells: "Backend/cells/last outgoing deliveries cells"
     # backend/cells/last_products_cells: "Backend/cells/last products cells"
@@ -727,7 +727,6 @@ fra:
     backend/financial_years: "Exercices comptables"
     # backend/gaps: "Backend/gaps"
     # backend/helps: "Backend/helps"
-    # backend/incidents: "Backend/incidents"
     backend/incoming_deliveries: "Livraisons entrantes"
     backend/incoming_delivery_items: "Lignes de livraison entrante"
     backend/incoming_delivery_modes: "Modes de réception d’arrivage"
@@ -738,6 +737,7 @@ fra:
     # backend/interventions: "Backend/interventions"
     backend/inventories: "Inventaires"
     backend/inventory_items: "Lignes d’inventaires"
+    backend/issues: "Incidents"
     backend/journal_entries: "Écritures comptables"
     backend/journal_entry_items: "Lignes d’écritures comptables"
     backend/journals: "Journaux"
@@ -925,16 +925,16 @@ fra:
     apply: "Appliquer"
     archives: "Archives"
     are_you_sure: "Êtes-vous sûr(e) de vouloir faire cela ?"
+    are_you_sure_you_want_to:
+      abort_issue: "Êtes-vous sûr(e) de vouloir abandonner cet incident ?"
+      close_issue: "Êtes-vous sûr(e) de vouloir clore cet incident ?"
+      reopen_issue: "Êtes-vous sûr(e) de vouloir ré-ouvrir cet incident ?"
     are_you_sure_you_want_to_confirm: "Êtes-vous sûr(e) de vouloir passer la vente en commande ?"
     are_you_sure_you_want_to_delete: "Êtes-vous sûr(e) de vouloir supprimer cet enregistrement ?"
     are_you_sure_you_want_to_delete_delivery: "Êtes-vous sûr(e) de vouloir enlever cette livraison du transport ?"
-    are_you_sure_you_want_to_drop_incident: "Êtes-vous sûr(e) de vouloir abandonner cet incident ?"
     are_you_sure_you_want_to_invoice: "Êtes-vous sûr(e) de vouloir facturer la vente ?"
-    are_you_sure_you_want_to_reopen_incident: "Êtes-vous sûr(e) de vouloir ré-ouvrir cet incident ?"
     are_you_sure_you_want_to_send_mails: "Êtes-vous sûr(e) de vouloir envoyer les mails ?"
-    are_you_sure_you_want_to_solve_incident: "Êtes-vous sûr(e) que cet incident est résolu ?"
     area_measure: "Superficie"
-    area_x: "%{name} (%{postcode})"
     assessable_operations: "Opérations imposables (H.T)"
     assimilated_tax: "Taxes assimilées calculées sur annexe n°3310A"
     attach_an_incoming_payment_to_expense: "Rattacher un encaissement\_: %{type} N°%{number}"
@@ -1188,7 +1188,6 @@ fra:
     import_backup: "Import de fichier de sauvegarde"
     importation_explanation: "Pour confirmer l’importation, vous devez confirmer en cliquant sur Importer."
     in_production: "En production"
-    incidents: "Incidents"
     include_blank: "— Aucune organisation —"
     income_statement: "Comptes de résultats"
     incoming_payment_conditions: "Conditions d’encaissement"
@@ -1219,6 +1218,7 @@ fra:
     invoiced_amount: "Montant facturé"
     invoices_only: "Utiliser seulement les factures"
     is: "Est"
+    issues: "Incidents"
     isu_index: "Index génétique ISU"
     items: "Éléments"
     journal: "Journal"
@@ -1232,7 +1232,7 @@ fra:
       mixed: "Écritures et lignes"
     journals: "Journaux"
     land_parcel_name: "Parcelle"
-    land_parcels: "Parcellaire"
+    land_parcels: "Parcelles"
     language: "Langue"
     last_animals: "Dernières naissances"
     last_clients: "Derniers clients"
@@ -1462,6 +1462,7 @@ fra:
     play: "Éxécuter"
     please_wait: "Merci de patienter…"
     population: "Population"
+    postal_zone_x: "%{name} (%{postal_code})"
     precipitation: "Précipitations"
     preferences: "Préférences"
     pretax_amount: "Montant HT"
