--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -987,25 +987,6 @@ jpn:
         # sir: "Monsieur"
         # syndicate: "Syndicat"
       # name: "Types de tiers"
-    incidents:
-      attributes:
-        # target: "Cible"
-        # treatments: "Traitements"
-      items:
-        # accident: "Accident"
-        # animal_pathology: "Pathologie animale"
-        # bacteria_disease: "Maladies bactériennes"
-        # climate_incident: "Incident climatique"
-        # diarrhea: "Diarrhée"
-        # fecondity_problem: "Problème de fécondité"
-        # fungus_disease: "Maladies cryptogamiques"
-        # incident: "Incident"
-        # mammite: "Mammite"
-        # nematoda_disease: "Maladies à nématodes"
-        # other: "Autre"
-        # respiratory_problem: "Problèmes respiratoires"
-        # vegetal_pathology: "Pathologie végétale"
-      # name: "Incidents"
     indicators:
       attributes:
         # choices: "Choix"
@@ -1186,6 +1167,11 @@ jpn:
         # water_content_rate: "Teneur en eau"
         # width: "Largeur"
       # name: "Indicateurs"
+    issue_natures:
+      attributes: #?
+      items: #?
+    issues:  #?
+ #?
     languages:
       items:
         afr: "アフリカーンス語"
