Configures Travis-CI

--- a/config/locales/fr-FR.pack.resources.yml
+++ b/config/locales/fr-FR.pack.resources.yml
@@ -21,7 +21,7 @@ fr-FR:
           one: '1 vente'
           other: '{{count}} ventes'
           zero: 'Aucune vente'
-        shape_operations:
+        operations:
           one: '1 traitement'
           other: '{{count}} traitements'
           zero: 'Aucun traitement'
