add some status in sales and purchases lists

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1245,8 +1245,10 @@ fra:
     last_outgoing_deliveries: "Dernières livraisons"
     last_payment_amount: "Montant du dernier encaissement"
     last_payment_date: "Date du dernier encaissement"
+    last_purchases: "Derniers achats"
     last_procedures: "Dernières procédures"
     last_products: "Dernières naissances"
+    last_sales: "Dernières ventes"
     left_balance_amount: "Report du crédit antérieur non imputé et non remboursé"
     letter: "Lettrer"
     letter_conclusion: "Veuillez agréer, Chère Madame, Cher Monsieur, l’expression de mes salutations distinguées."
