--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -130,6 +130,8 @@ spa:
     backend/cells/last_outgoing_deliveries_cells: #?
     backend/cells/last_procedures_cells: #?
     backend/cells/last_products_cells: #?
+    backend/cells/last_purchases_cells: #?
+    backend/cells/last_sales_cells: #?
     backend/cells/map_cells: #?
     backend/cells/meteo_cells: #?
     backend/cells/placeholder_cells: #?
@@ -1250,6 +1252,8 @@ spa:
     # last_payment_date: "Date du dernier encaissement"
     # last_procedures: "Dernières procédures"
     # last_products: "Dernières naissances"
+    # last_purchases: "Derniers achats"
+    # last_sales: "Dernières ventes"
     left_balance_amount: "Aplazamiento del credito anterior sin imputar ni reembolsar"
     # letter: "Lettrer"
     # letter_conclusion: "Veuillez agréer, Chère Madame, Cher Monsieur, l’expression de mes salutations distinguées."
