--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -121,6 +121,8 @@ jpn:
     backend/cells/last_outgoing_deliveries_cells: #?
     backend/cells/last_procedures_cells: #?
     backend/cells/last_products_cells: #?
+    backend/cells/last_purchases_cells: #?
+    backend/cells/last_sales_cells: #?
     backend/cells/map_cells: #?
     backend/cells/meteo_cells: #?
     backend/cells/placeholder_cells: #?
@@ -1133,6 +1135,8 @@ jpn:
     # last_payment_date: "Date du dernier encaissement"
     # last_procedures: "Dernières procédures"
     # last_products: "Dernières naissances"
+    # last_purchases: "Derniers achats"
+    # last_sales: "Dernières ventes"
     # left_balance_amount: "Report du crédit antérieur non imputé et non remboursé"
     # letter: "Lettrer"
     # letter_conclusion: "Veuillez agréer, Chère Madame, Cher Monsieur, l’expression de mes salutations distinguées."
