--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -883,6 +883,7 @@ eng:
       childrens: "Childs"
     animals: "Animals"
     apply: "Apply"
+    # archived_at: "Archivé à"
     archives: "Archives"
     are_you_sure: "Are you sure you want to do this?"
     are_you_sure_you_want_to:
@@ -1111,6 +1112,7 @@ eng:
     # fat_matters_concentration: "Teneur en matières grasses"
     fax: "Fax"
     file_nature: "File type"
+    # file_pages_count: "Nombre de pages"
     file_to_download: "File to upload"
     file_to_import: "File to upload"
     file_to_upload: "File to upload"
@@ -1212,10 +1214,12 @@ eng:
     last_animals: "Last birth"
     # last_clients: "Derniers clients"
     last_computed_balance: "Last computed balance"
+    # last_document_archives: "Derniers archivages"
     # last_entities: "Derniers tiers"
     last_events: "Last Events"
     # last_incoming_deliveries: "Derniers approvisionnements"
     # last_interventions: "Dernières interventions"
+    # last_issues: "Derniers incidents"
     last_milk_result: "Last milk analysis"
     # last_outgoing_deliveries: "Dernières livraisons"
     last_payment_amount: "Amount of the last payment"
