--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -8,6 +8,7 @@ fra:
         accountancy: "Comptabilité"
         animal_farming: "Élevage bovins"
         aromatic_and_medicinal_plants: "Plantes médicinales et aromatiques"
+        beet_crops: "Betterave"
         cattle_farming: "Élevage"
         exploitation: "Exploitation"
         fallow_land: "Jachère"
@@ -28,6 +29,7 @@ fra:
         service: "Service"
         sheep_farming: "Élevage ovins"
         stocks: "Stocks"
+        straw_cereal_crops: "Céréales à paille"
         vegetal_crops: "Production végétale"
     animal:
       variety:
