--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -995,6 +995,7 @@ arb:
       # childrens: "Enfants"
     # animals: "Animaux"
     apply: "تطبيق"
+    # archived_at: "Archivé à"
     # archives: "Archives"
     are_you_sure: "هل انت متأكد من رغبتك بالقيام به؟"
     are_you_sure_you_want_to:
@@ -1254,6 +1255,7 @@ arb:
     # fat_matters_concentration: "Teneur en matières grasses"
     # fax: "Fax"
     file_nature: "نوع الملف"
+    # file_pages_count: "Nombre de pages"
     file_to_download: "ملف الاستيراد"
     file_to_import: "ملف للاستيراد"
     # file_to_upload: "Fichier à importer"
@@ -1367,10 +1369,12 @@ arb:
     # last_animals: "Dernières naissances"
     # last_clients: "Derniers clients"
     # last_computed_balance: "Dernière balance calculée"
+    # last_document_archives: "Derniers archivages"
     # last_entities: "Derniers tiers"
     # last_events: "Derniers évènements"
     # last_incoming_deliveries: "Derniers approvisionnements"
     # last_interventions: "Dernières interventions"
+    # last_issues: "Derniers incidents"
     # last_milk_result: "Dernières analyses de lait"
     # last_outgoing_deliveries: "Dernières livraisons"
     # last_payment_amount: "Montant du dernier encaissement"
