--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -29,6 +29,9 @@ fra:
         area: "Superficie"
       document:
         filename: "Fichier"
+      document_archive:
+        archived_at: "Archivé le"
+        file_pages_count: "Nombre de page"
       document_template:
         managed: "Géré par le système"
       entity:
