--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -810,6 +810,7 @@ jpn:
       # childrens: "Enfants"
     # animals: "Animaux"
     apply: "適用する"
+    # archived_at: "Archivé à"
     # archives: "Archives"
     # are_you_sure: "Êtes-vous sûr(e) de vouloir faire cela ?"
     are_you_sure_you_want_to:
@@ -1029,6 +1030,7 @@ jpn:
     # fat_matters_concentration: "Teneur en matières grasses"
     # fax: "Fax"
     # file_nature: "Type de fichier"
+    # file_pages_count: "Nombre de pages"
     # file_to_download: "Fichier à importer"
     # file_to_import: "Fichier à importer"
     # file_to_upload: "Fichier à importer"
@@ -1125,10 +1127,12 @@ jpn:
     # last_animals: "Dernières naissances"
     # last_clients: "Derniers clients"
     # last_computed_balance: "Dernière balance calculée"
+    # last_document_archives: "Derniers archivages"
     # last_entities: "Derniers tiers"
     # last_events: "Derniers évènements"
     # last_incoming_deliveries: "Derniers approvisionnements"
     # last_interventions: "Dernières interventions"
+    # last_issues: "Derniers incidents"
     # last_milk_result: "Dernières analyses de lait"
     # last_outgoing_deliveries: "Dernières livraisons"
     # last_payment_amount: "Montant du dernier encaissement"
