--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -37,6 +37,9 @@ spa:
       deposit: #?
       document:
         # filename: "Fichier"
+      document_archive:
+        # archived_at: "Archivé le"
+        # file_pages_count: "Nombre de page"
       document_template:
         # managed: "Géré par le système"
       entity:
