Enhances affairs with Gap (not fully working)

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -25,6 +25,7 @@ fra:
     backend/affairs:
       attach: "Associer une transaction"
       detach: "Dissocier une transaction"
+      # finish: "Finish backend/affair"
       index: "Transactions"
       select: "Ajouter une transaction"
     backend/aggregators:
@@ -1035,6 +1036,9 @@ fra:
     contains: "Contient"
     content_products: "Produits contenus"
     contextual_help: "Aide contextuelle"
+    convert_balance_into:
+      loss: "Passer le solde en perte"
+      profit: "Passer le solde en profit"
     coordinates: "Coordonnées"
     copy_of: "Copie de %{source}"
     cost: "Coût"
@@ -1899,6 +1903,7 @@ fra:
     bookkeeping_works_only_with: "La bascule en comptabilité ne peut se faire actuellement que pour\_: %{list}."
     cannot_delete_entity: "Il n’est pas possible de supprimer cette fiche car elle possède un historique comptable" #?
     # cannot_find_deal_to_attach: "Cannot find deal to attach"
+    # cannot_find_deal_to_detach: "Cannot find deal to detach"
     cannot_find_document_template: "Impossible de trouver le modèle de document" #?
     cannot_mark_entry_items: "Impossible de lettrer ces lignes d’écritures ensemble"
     cannot_merge_an_entity_with_itself: "Il n’est pas possible de fusionner une fiche avec elle-même"
