--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -916,6 +916,9 @@ jpn:
     # contains: "Contient"
     # content_products: "Produits contenus"
     # contextual_help: "Aide contextuelle"
+    convert_balance_into:
+      # loss: "Passer le solde en perte"
+      # profit: "Passer le solde en profit"
     # coordinates: "Coordonnées"
     # copy_of: "Copie de %{source}"
     # cost: "Coût"
