--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -432,7 +432,7 @@ spa:
       # zone_property_title: "Titre de propriété foncière"
   attributes:
     # abilities: "Compétences"
-    # abilities_list: "Abilities list"
+    # abilities_list: "Liste des compétences"
     # absolute_credit: "Absolute credit"
     # absolute_currency: "Absolute currency"
     # absolute_debit: "Absolute debit"
@@ -586,6 +586,7 @@ spa:
     # data: "Données complémentaires"
     # dead_at: "Décédé(e) le"
     # dead_on: "Date de décès"
+    # deal_type: "Type de transaction"
     # death: "Death"
     # debit: "Débit"
     # debtor: "Debiteur"
@@ -634,6 +635,7 @@ spa:
     # document: "Document"
     # document_archives: "Archives documentaires"
     # documents: "Documents"
+    # done_on: "Fait le"
     # downpayment: "Acompte"
     # downpayment_amount: "Montant de l’acompte"
     # downpayment_minimum: "Somme minimale"
@@ -947,7 +949,8 @@ spa:
     # reduction_origin: "Ligne soumise à réduction"
     # reduction_percentage: "Pourcentage de réduction"
     # reductions: "Lignes de réductions"
-    # reference_name: "Reference name"
+    # reference: "Référence"
+    # reference_name: "Référence"
     # reference_number: "N°Référence"
     # reflections: "Reflections"
     # remaining_duration: "Durée d’utilisation prévue (heures)"
