--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -385,7 +385,7 @@ fra:
       zone_property_title: "Titre de propriété foncière"
   attributes:
     abilities: "Compétences"
-    abilities_list: "Abilities list"
+    abilities_list: "Liste des compétences"
     absolute_credit: "Absolute credit"
     absolute_currency: "Absolute currency"
     absolute_debit: "Absolute debit"
@@ -560,6 +560,7 @@ fra:
     data: "Données complémentaires"
     dead_at: "Décédé(e) le"
     dead_on: "Date de décès"
+    deal_type: "Type de transaction" #?
     # deals_count: "Deals count"
     death: "Death"
     debit: "Débit"
@@ -610,6 +611,7 @@ fra:
     document: "Document"
     document_archives: "Archives documentaires"
     documents: "Documents"
+    done_on: "Fait le" #?
     downpayment: "Acompte"
     downpayment_amount: "Montant de l’acompte"
     downpayment_minimum: "Somme minimale"
@@ -958,7 +960,8 @@ fra:
     reduction_origin: "Ligne soumise à réduction" #?
     reduction_percentage: "Pourcentage de réduction"
     reductions: "Lignes de réductions"
-    reference_name: "Reference name"
+    reference: "Référence"
+    reference_name: "Référence"
     reference_number: "N°Référence"
     # reference_tax: "Reference tax"
     reflections: "Reflections"
